force-app/main/default/objects/custom__c/custom__c.object-meta.xml
<CustomObject>
    <label>custom</label>
    <nameField>
        <displayFormat>{00}</displayFormat>
        <label>WAR ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>customs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>