force-app/main/default/objects/custom__c/fields/author__c.field-meta.xml
<CustomField>
    <fullName>author__c</fullName>
    <label>author</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>bruce</fullName>
                <default>true</default>
                <label>bruce</label>
            </value>
            <value>
                <fullName>micheal</fullName>
            </value>
            <value>
                <fullName>paul</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>