force-app/main/default/objects/custom__c/fields/category__c.field-meta.xml
<CustomField>
    <fullName>category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>general</fullName>
                <default>true</default>
                <label>general</label>
            </value>
            <value>
                <fullName>issues</fullName>
            </value>
            <value>
                <fullName>stakeholders</fullName>
            </value>
            <value>
                <fullName>events</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>