force-app/main/default/objects/custom__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <formula>DivisionHide__c</formula>
    <label>Division</label>
    <type>Text</type>
</CustomField>