force-app/main/default/objects/custom__c/fields/DivisionHide__c.field-meta.xml
<CustomField>
    <fullName>DivisionHide__c</fullName>
    <label>DivisionHide</label>
    <length>255</length>
    <type>Text</type>
</CustomField>