force-app/main/default/objects/custom__c/fields/leagcy_key__c.field-meta.xml
<CustomField>
    <fullName>leagcy_key__c</fullName>
    <label>legacy case key</label>
    <length>10</length>
    <type>Text</type>
</CustomField>