force-app/main/default/objects/custom__c/validationRules/CategoryMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>CategoryMandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(category__c,&#39;-None-&#39;)</errorConditionFormula>
    <errorDisplayField>category__c</errorDisplayField>
    <errorMessage>Please select a value</errorMessage>
</ValidationRule>