force-app/main/default/objects/custom__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>category__c</columns>
    <columns>NAME</columns>
    <columns>Division__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>